# Dinamica-Adaptativa

./: .gitattributes  .gitignore  README.md  caso_gaussiano.ipynb  caso_gaussiano_2D.ipynb  caso_inestable.ipynb  cfl.md  ejemplos.ipynb  main.py  pyproject.toml
docs/: diferencias_finitas_algoritmo.md  diferencias_finitas_cfl.md
src/: __init__.py  constants.py  funciones_generales.py  model.py  plot.py
src/methods/: __init__.py  diferencias_finitas.md  diferencias_finitas.py  espectral.py
src/metodos/: diferencias_finitas.md  diferencias_finitas.py  espectral.py
src/tools/: __init__.py  grid.py  laplacian.py  model_components.py
