[project]
name = "dinamica-adaptativa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "mypy>=2.1.0",
    "pip>=26.1.1",
    "ruff>=0.15.15",
    "scipy-stubs>=1.17.1.5",
]

[tool.ruff]
src = ["src"]

[tool.mypy]
files = ["src"]
